--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "reactstrap": "^8.5.1",
     "twitter": "^1.7.1"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
+    "start-server": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
