--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "reactstrap": "^8.5.1",
     "socket.io": "^2.3.0",
     "twit": "^2.2.11",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "uniqid": "^5.2.0"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
