--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "jquery": "^3.5.1",
     "leaflet": "^1.6.0",
     "popper.js": "^1.16.1",
