--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
-    "server": "nodemon ./src/server/server.js",
+    "server": "nodemon ./server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
