--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"npm:server\" \"npm:client\"",
-    "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
+    "start": "nodemon server.js",
+    "dev": "concurrently --kill-others-on-fail \"npm:server\" \"npm:client\""
   },
   "repository": {
     "type": "git",
