--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
     "nodemon": "^2.0.4",
@@ -30,7 +31,6 @@
     "twit": "^2.2.11"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
-    "dotenv": "^8.2.0"
+    "concurrently": "^5.3.0"
   }
 }
