--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon server.js",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
     "start": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"npm:server\" \"npm:client\""
+    "dev": "concurrently --kill-others-on-fail \"npm:server\" \"npm:client\"",
+    "build": "npm run build"
   },
   "repository": {
     "type": "git",
