added TUBE_API to .env

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAArcHAEAAAAA%2Fvd1GsfOa7yLo0dWp2t%2FpEw
 TWITTER_ACCESS_TOKEN_KEY=867194274365882368-6SerPkODtJrjSZSSDG3aqLJPkHdId3Z
 TWITTER_ACCESS_TOKEN_SECRET=iKTm4ioet3Ng71Dv31ChzEad8y3eKCWbkBLboFkUDSVI2
 REACT_APP_TUBE_API_KEY=AIzaSyDyZcC0RegIfrZkLbapHQBwRhF5SlDWm9Q
-
+TUBE_API=AIzaSyDyZcC0RegIfrZkLbapHQBwRhF5SlDWm9Q
