--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
-    "heroku-postbuild": "cd client && npm install && CI=false npm run build",
+    "heroku-postbuild": "npm install && CI=false npm run build",
     "start": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"npm:server\" \"npm:client\"",
     "build": "npm run build"
