--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "heroku-postbuild": "cd client && npm install && CI=false npm run build",
     "start": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"npm:server\" \"npm:client\"",
-    "build": "npm run build"
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
